Another try to fix squished cities

--- a/assets/css/company.css
+++ b/assets/css/company.css
@@ -182,12 +182,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  height: auto;
 }
 
 .cities-row img {
   width: 20%;
-  height: auto;
+  height: calc(20% * 1.176);
 }
 
 .leadership-heading {
